--- a/css/kwf_global.css
+++ b/css/kwf_global.css
@@ -2,14 +2,16 @@
  * KWF Style: kwf_global.css
  * 
  * @author Christoffer Lindahl <christoffer@kekos.se>
- * @date 2011-04-28
- * @version 3.0
+ * @date 2011-07-11
+ * @version 3.2
  */
 
 /* Reset */
 
-html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, a, abbr, acronym, address, cite, code, del, dfn, em, img, ins, q, 
-strong, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td
+html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, a, b, abbr, address, cite, 
+code, del, dfn, em, i, img, ins, q, samp, small, strong, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, 
+label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, 
+figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video
   {
   margin: 0;
   padding: 0;
@@ -41,6 +43,22 @@ caption, th, td
   text-align: left;
   font-weight: normal;
   vertical-align: top;
+  }
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section
+  {
+  display: block;
+  }
+
+blockquote, q
+  {
+  quotes: none;
+  }
+
+blockquote:before, blockquote:after, q:before, q:after
+  {
+  content: '';
+  content: none;
   }
 
 /* Fonts */
@@ -109,7 +127,9 @@ ul, ol
   list-style-type: circle;
   }
 
-li { margin: 2px 0 2px; }
+ol { list-style-type: decimal; }
+li { margin: 2px 1%; }
+li li { font-size: 1em; }
 
 .inline-list li
   {
@@ -207,4 +227,45 @@ form .description
   {
   display: inline-block;
   width: 30%;
+  }
+
+/* Boxing */
+
+#boxing-overlayer
+  {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #93aebc;
+  opacity: 0.6;
+  z-index: 100;
+  text-align: center;
+  }
+
+#close_boxing
+  {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  padding-bottom: 100px;
+  font-size: 0.8em;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  }
+
+#boxing-window
+  {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background: #fff;
+  border: 1px solid #93aebc;
+  z-index: 101;
+  overflow: auto;
+  text-align: left;
   }
