--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -4,12 +4,16 @@
 <head>
   <title>KWF &gt; <?php echo $this->title; ?></title>
   <meta charset="utf-8" />
-  <link title="KWF" href="<?php echo FULLPATH; ?>/css/kwf.css" rel="stylesheet" media="screen" />
-  <link href="<?php echo FULLPATH; ?>/css/site_print.css" rel="stylesheet" media="print" />
+  <link title="KWF" href="<?php echo FULLPATH; ?>/css/kwf<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="screen" />
+  <link href="<?php echo FULLPATH; ?>/css/site_print<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="print" />
   <!--<link type="image/vnd.microsoft.icon" href="<?php echo FULLPATH; ?>/favicon.ico" rel="icon" />-->
+<?php if (MINIFIED): ?>
+  <script src="<?php echo FULLPATH; ?>/js/site.min.js"></script>
+<?php else: ?>
   <script src="<?php echo FULLPATH; ?>/js/kwf.js"></script>
   <script src="<?php echo FULLPATH; ?>/js/site.js"></script>
-  <!--[if lte IE 8]><script src="<?php echo FULLPATH; ?>/js/html5.js" type="text/javascript"></script><![endif]-->
+<?php endif; ?>
+  <!--[if lte IE 8]><script src="<?php echo FULLPATH; ?>/js/html5.min.js" type="text/javascript"></script><![endif]-->
 </head>
 
 <body>
