Added test page for routeRedirect.

--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -27,7 +27,7 @@
     <li><a href="<?php echo urlModr(); ?>">Hem</a></li>
     <li><a href="<?php echo urlModr('kontakt'); ?>">Kontakt</a></li>
     <li><a href="<?php echo urlModr('ladda-upp'); ?>">Ladda upp fil</a></li>
-    <li><a href="<?php echo urlModr('anvandare'); ?>">Användare</a></li>
+    <li><a href="<?php echo urlModr('internal-redirect'); ?>">Testa intern omdirigering</a></li>
   </ul>
 </nav>
 
@@ -53,7 +53,7 @@ if (count($this->info_messages)): ?>
 </div>
 
 <footer id="footer">
-  <p>Av <a href="http://kekos.se/">Christoffer Lindahl</a>, 2009-2011</p>
+  <p>Av <a href="http://kekos.se/">Christoffer Lindahl</a>, 2009-2012</p>
 </footer>
 
 </body>
