--- a/css/kwf_global.css
+++ b/css/kwf_global.css
@@ -2,8 +2,8 @@
  * KWF Style: kwf_global.css
  * 
  * @author Christoffer Lindahl <christoffer@kekos.se>
- * @date 2011-07-11
- * @version 3.2
+ * @date 2012-03-28
+ * @version 4.0
  */
 
 /* Reset */
@@ -228,6 +228,8 @@ form .description
   display: inline-block;
   width: 30%;
   }
+
+.form-error { background: #ffac8f; }
 
 /* Boxing */
 
