Added test case for History pushState in ContentRequest.

--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -24,10 +24,10 @@
 
 <nav id="menu">
   <ul>
-    <li><a href="<?php echo urlModr(); ?>">Hem</a></li>
-    <li><a href="<?php echo urlModr('kontakt'); ?>">Kontakt</a></li>
-    <li><a href="<?php echo urlModr('ladda-upp'); ?>">Ladda upp fil</a></li>
-    <li><a href="<?php echo urlModr('internal-redirect'); ?>">Testa intern omdirigering</a></li>
+    <li><a href="<?php echo urlModr(); ?>" class="clink">Hem</a></li>
+    <li><a href="<?php echo urlModr('kontakt'); ?>" class="clink">Kontakt</a></li>
+    <li><a href="<?php echo urlModr('ladda-upp'); ?>" class="clink">Ladda upp fil</a></li>
+    <li><a href="<?php echo urlModr('internal-redirect'); ?>" class="clink">Testa intern omdirigering</a></li>
   </ul>
 </nav>
 
