--- a/view/index.phtml
+++ b/view/index.phtml
@@ -1,6 +1,13 @@
-  <h1>Hem</h1>
+  <h1><?php echo _('HEADER_HOME'); ?></h1>
 
-  <p>Men se välkommen då! <a href="<?php echo urlModr('index', 'redirect'); ?>" id="load_contactform">Ladda kontaktformulär...</a></p>
+  <p><?php echo _('HOME_WELCOME'); ?> <a href="<?php echo urlModr('index', 'redirect'); ?>" id="load_contactform"><?php echo _('HOME_LOAD_CONTACT'); ?></a></p>
   <!--<p><img src="<?php echo FULLPATH; ?>/images/ajax-loader.gif" />
     <img src="<?php echo FULLPATH; ?>/images/address.png" />
     <img src="<?php echo FULLPATH; ?>/images/favicon.ico" /></p>-->
+
+  <h2><?php echo _('HOME_HEADER_LANGUAGE'); ?></h2>
+
+  <ul>
+    <li><a href="<?php echo urlModr($route, 'language', 'sv'); ?>">Svenska</a></li>
+    <li><a href="<?php echo urlModr($route, 'language', 'en'); ?>">English</a></li>
+  </ul>
