--- a/css/kwf_global.css
+++ b/css/kwf_global.css
@@ -2,7 +2,7 @@
  * KWF Style: kwf_global.css
  * 
  * @author Christoffer Lindahl <christoffer@kekos.se>
- * @date 2012-03-28
+ * @date 2012-08-21
  * @version 4.0
  */
 
@@ -250,13 +250,12 @@ form .description
 #close_boxing
   {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  padding-bottom: 100px;
-  font-size: 0.8em;
-  font-weight: bold;
-  color: #000;
-  text-align: center;
+  margin: 0;
+  width: 16px;
+  height: 16px;
+  z-index: 102;
+  background: url('../images/close-boxing.png') no-repeat;
+  text-indent: -9999px;
   }
 
 #boxing-window
