--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -14,6 +14,7 @@
   <script src="<?php echo FULLPATH; ?>/js/site.js"></script>
 <?php endif; ?>
   <!--[if lte IE 8]><script src="<?php echo FULLPATH; ?>/js/html5.min.js" type="text/javascript"></script><![endif]-->
+  <?php scriptLanguageExport(); ?>
 </head>
 
 <body>
