--- a/css/kwf_global.css
+++ b/css/kwf_global.css
@@ -2,7 +2,7 @@
  * KWF Style: kwf_global.css
  * 
  * @author Christoffer Lindahl <christoffer@kekos.se>
- * @date 2012-08-21
+ * @date 2013-01-19
  * @version 4.0
  */
 
@@ -242,6 +242,7 @@ form .description
   width: 100%;
   height: 100%;
   background: #93aebc;
+  filter: alpha(opacity=60);
   opacity: 0.6;
   z-index: 100;
   text-align: center;
