--- a/css/kwf_global.css
+++ b/css/kwf_global.css
@@ -200,8 +200,8 @@ input, button, select, textarea
 
 button
   {
-  padding: 2px;
-  height: 23px;
+  padding: 5px;
+  line-height: 1;
   font-weight: bold;
   }
 
