--- a/view/contact.phtml
+++ b/view/contact.phtml
@@ -1,4 +1,4 @@
-  <h1><?php echo __('HEADER_HOME'); ?></h1>
+  <h1><?php echo __('HEADER_CONTACT'); ?></h1>
 
   <p><?php echo __('CONTACT_EXPLAIN'); ?></p>
 
@@ -7,16 +7,16 @@
       <legend><?php echo __('CONTACT_HEADER'); ?></legend>
       <ol>
         <li>
-          <label for="from"><?php echo __('CONTACT_NAME'); ?></label>
-          <input type="text" name="from" id="from" maxlength="50"<?php request::formStatePost('from', 'text'); ?> /><?php response::getFormError('from'); ?>
+          <label for="from"><?php echo __('CONTACT_NAME'); ?><?php response::getFormError('from'); ?></label>
+          <input type="text" name="from" id="from" maxlength="50"<?php request::formStatePost('from', 'text'); ?> />
         </li>
         <li>
-          <label for="email"><?php echo __('CONTACT_EMAIL'); ?></label>
-          <input type="text" name="email" id="email" maxlength="256"<?php request::formStatePost('email', 'text'); ?> /><?php response::getFormError('email'); ?>
+          <label for="email"><?php echo __('CONTACT_EMAIL'); ?><?php response::getFormError('email'); ?></label>
+          <input type="text" name="email" id="email" maxlength="256"<?php request::formStatePost('email', 'text'); ?> />
         </li>
         <li>
-          <label for="message"><?php echo __('CONTACT_MESSAGE'); ?></label>
-          <textarea name="message" id="message" cols="20" rows="5"><?php request::formStatePost('message', 'textarea'); ?></textarea><?php response::getFormError('message'); ?>
+          <label for="message"><?php echo __('CONTACT_MESSAGE'); ?><?php response::getFormError('message'); ?></label>
+          <textarea name="message" id="message" cols="20" rows="5"><?php request::formStatePost('message', 'textarea'); ?></textarea>
         </li>
         <li><button type="submit" name="send" value="yes"><?php echo __('CONTACT_SEND'); ?></button><input type="hidden" id="nothing" value="null" /></li>
       </ol>
