Layout files (outer views) are now considered as ordinary HTMLViews and therefore no longer have access to Response class' properties.

--- a/view/error_layout.phtml
+++ b/view/error_layout.phtml
@@ -3,7 +3,7 @@
 <html lang="sv" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>KWF &gt; <?php echo $this->title; ?></title>
+  <title>KWF &gt; <?php echo $title; ?></title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link type="text/css" title="KWF" href="<?php echo FULLPATH; ?>/css/kwf.min.css" rel="stylesheet" media="screen" />
 </head>
@@ -11,9 +11,9 @@
 <body>
 
 <div id="error-wrapper">
-  <h1><?php echo $this->title; ?></h1>
+  <h1><?php echo $title; ?></h1>
 
-<?php echo $this->content_data; ?>
+<?php echo $content_data; ?>
 </div>
 
 </body>
