--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -2,7 +2,6 @@
 <html lang="sv" dir="<?php echo __('READ_DIRECTION'); ?>">
 
 <head>
-  <title>KWF &gt; <?php echo $this->title; ?></title>
   <meta charset="utf-8" />
   <link title="KWF" href="<?php echo FULLPATH; ?>/css/kwf<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="screen" />
   <link href="<?php echo FULLPATH; ?>/css/site_print<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="print" />
@@ -49,7 +48,7 @@ if (count($this->info_messages)): ?>
   </ul>
 <?php endif; ?>
 
-<?php echo $this->content_data; ?>
+<?php echo $content_data; ?>
 
 </div>
 
