--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link title="KWF" href="<?php echo FULLPATH; ?>/css/kwf<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="screen" />
+  <title>KWF &gt; <?php echo $title; ?></title>
+  <link title="KWF" href="<?php echo FULLPATH; ?>/css/site<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="screen" />
   <link href="<?php echo FULLPATH; ?>/css/site_print<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="print" />
   <!--<link type="image/vnd.microsoft.icon" href="<?php echo FULLPATH; ?>/favicon.ico" rel="icon" />-->
 <?php if (MINIFIED): ?>
