--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -20,34 +20,29 @@
 <body>
 
 <header id="header">
-  <h1><a href="<?php echo urlModr(); ?>">KWF</a></h1>
+  <h1 id="logo"><a href="<?php echo urlModr(); ?>">KWF</a></h1>
+
+  <nav id="menu">
+    <ul>
+      <li><a href="<?php echo urlModr(); ?>" class="content-context"><?php echo __('HEADER_HOME'); ?></a></li>
+      <li><a href="<?php echo urlModr('kontakt'); ?>" class="content-context"><?php echo __('HEADER_CONTACT'); ?></a></li>
+      <li><a href="<?php echo urlModr('ladda-upp'); ?>" class="content-context"><?php echo __('HEADER_UPLOAD'); ?></a></li>
+      <li><a href="<?php echo urlModr('internal-redirect'); ?>" class="content-context"><?php echo __('HEADER_REDIRECT'); ?></a></li>
+    </ul>
+  </nav>
 </header>
 
-<nav id="menu">
-  <ul>
-    <li><a href="<?php echo urlModr(); ?>" class="clink"><?php echo __('HEADER_HOME'); ?></a></li>
-    <li><a href="<?php echo urlModr('kontakt'); ?>" class="clink"><?php echo __('HEADER_CONTACT'); ?></a></li>
-    <li><a href="<?php echo urlModr('ladda-upp'); ?>" class="clink"><?php echo __('HEADER_UPLOAD'); ?></a></li>
-    <li><a href="<?php echo urlModr('internal-redirect'); ?>" class="clink"><?php echo __('HEADER_REDIRECT'); ?></a></li>
-  </ul>
-</nav>
+<ul id="kwf_messages_view">
+<?php foreach ($error_messages as $msg): ?>
+  <li class="kwf-error"><?php echo $msg; ?></li>
+<?php endforeach;
+
+foreach ($info_messages as $msg): ?>
+  <li class="kwf-info"><?php echo $msg; ?></li>
+<?php endforeach; ?>
+</ul>
 
 <div id="content">
-<?php if (count($this->error_messages)): ?>
-  <ul id="errorlist">
-<?php foreach ($this->error_messages as $msg): ?>
-    <li><?php echo $msg; ?></li>
-<?php endforeach; ?>
-  </ul>
-<?php endif; 
-
-if (count($this->info_messages)): ?>
-  <ul id="infolist">
-<?php foreach ($this->info_messages as $msg): ?>
-    <li><?php echo $msg; ?></li>
-<?php endforeach; ?>
-  </ul>
-<?php endif; ?>
 
 <?php echo $content_data; ?>
 
