--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -11,6 +11,7 @@
   <script src="<?php echo FULLPATH; ?>/js/site.min.js"></script>
 <?php else: ?>
   <script src="<?php echo FULLPATH; ?>/js/kwf.js"></script>
+  <script src="<?php echo FULLPATH; ?>/js/kwf.Widget.js"></script>
   <script src="<?php echo FULLPATH; ?>/js/site.js"></script>
 <?php endif; ?>
   <!--[if lte IE 8]><script src="<?php echo FULLPATH; ?>/js/html5.min.js" type="text/javascript"></script><![endif]-->
