--- a/view/error_layout.phtml
+++ b/view/error_layout.phtml
@@ -1,11 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="sv" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="sv">
 
 <head>
+  <meta charset="utf-8" />
   <title>KWF &gt; <?php echo $title; ?></title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link type="text/css" title="KWF" href="<?php echo FULLPATH; ?>/css/kwf.min.css" rel="stylesheet" media="screen" />
+  <link title="KWF" href="<?php echo FULLPATH; ?>/css/kwf.min.css" rel="stylesheet" />
 </head>
 
 <body>
