--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>KWF &gt; <?php echo $title; ?></title>
+  <link href="http://yui.yahooapis.com/pure/0.2.0/pure-min.css" rel="stylesheet" />
+  <link href="<?php echo FULLPATH; ?>/css/kwf<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" />
   <link title="KWF" href="<?php echo FULLPATH; ?>/css/site<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="screen" />
   <link href="<?php echo FULLPATH; ?>/css/site_print<?php if (MINIFIED) echo '.min'; ?>.css" rel="stylesheet" media="print" />
   <!--<link type="image/vnd.microsoft.icon" href="<?php echo FULLPATH; ?>/favicon.ico" rel="icon" />-->
@@ -20,10 +22,10 @@
 
 <body>
 
-<header id="header">
-  <h1 id="logo"><a href="<?php echo urlModr(); ?>">KWF</a></h1>
+<header id="header" class="pure-g-r">
+  <a href="<?php echo urlModr(); ?>" id="logo" class="pure-u-1-3">KWF</a>
 
-  <nav id="menu">
+  <nav id="menu" class="pure-u-2-3">
     <ul>
       <li><a href="<?php echo urlModr(); ?>" class="content-context"><?php echo __('HEADER_HOME'); ?></a></li>
       <li><a href="<?php echo urlModr('kontakt'); ?>" class="content-context"><?php echo __('HEADER_CONTACT'); ?></a></li>
