--- a/view/contact.phtml
+++ b/view/contact.phtml
@@ -2,23 +2,28 @@
 
   <p><?php echo __('CONTACT_EXPLAIN'); ?></p>
 
-  <form action="<?php echo htmlspecialchars(urlModr($route)); ?>" method="post" class="ajax-form">
+  <form action="<?php echo htmlspecialchars(urlModr($route)); ?>" method="post" class="ajax-form pure-form pure-form-aligned">
     <fieldset>
       <legend><?php echo __('CONTACT_HEADER'); ?></legend>
-      <ol>
-        <li>
-          <label for="from"><?php echo __('CONTACT_NAME'); ?><?php response::getFormError('from'); ?></label>
-          <input type="text" name="from" id="from" maxlength="50"<?php request::formStatePost('from', 'text'); ?> />
-        </li>
-        <li>
-          <label for="email"><?php echo __('CONTACT_EMAIL'); ?><?php response::getFormError('email'); ?></label>
-          <input type="text" name="email" id="email" maxlength="256"<?php request::formStatePost('email', 'text'); ?> />
-        </li>
-        <li>
-          <label for="message"><?php echo __('CONTACT_MESSAGE'); ?><?php response::getFormError('message'); ?></label>
-          <textarea name="message" id="message" cols="20" rows="5"><?php request::formStatePost('message', 'textarea'); ?></textarea>
-        </li>
-        <li><button type="submit" name="send" value="yes"><?php echo __('CONTACT_SEND'); ?></button><input type="hidden" id="nothing" value="null" /></li>
-      </ol>
+
+      <div class="pure-control-group">
+        <label for="from"><?php echo __('CONTACT_NAME'); ?><?php response::getFormError('from'); ?></label>
+        <input type="text" name="from" id="from" maxlength="50"<?php request::formStatePost('from', 'text'); ?> />
+      </div>
+
+      <div class="pure-control-group">
+        <label for="email"><?php echo __('CONTACT_EMAIL'); ?><?php response::getFormError('email'); ?></label>
+        <input type="text" name="email" id="email" maxlength="256"<?php request::formStatePost('email', 'text'); ?> />
+      </div>
+
+      <div class="pure-control-group">
+        <label for="message"><?php echo __('CONTACT_MESSAGE'); ?><?php response::getFormError('message'); ?></label>
+        <textarea name="message" id="message" cols="20" rows="5"><?php request::formStatePost('message', 'textarea'); ?></textarea>
+      </div>
+
+      <div class="pure-controls">
+        <button type="submit" name="send" value="yes" class="pure-button"><?php echo __('CONTACT_SEND'); ?></button>
+        <input type="hidden" id="nothing" value="null" />
+      </div>
     </fieldset>
   </form>
