--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -14,6 +14,7 @@
 <?php else: ?>
   <script src="<?php echo FULLPATH; ?>/js/kwf.js"></script>
   <script src="<?php echo FULLPATH; ?>/js/kwf.Widget.js"></script>
+  <script src="<?php echo FULLPATH; ?>/js/kwf.AEDactions.js"></script>
   <script src="<?php echo FULLPATH; ?>/js/site.js"></script>
 <?php endif; ?>
   <!--[if lte IE 8]><script src="<?php echo FULLPATH; ?>/js/html5.min.js" type="text/javascript"></script><![endif]-->
@@ -30,6 +31,7 @@
       <li><a href="<?php echo urlModr(); ?>" class="content-context"><?php echo __('HEADER_HOME'); ?></a></li>
       <li><a href="<?php echo urlModr('kontakt'); ?>" class="content-context"><?php echo __('HEADER_CONTACT'); ?></a></li>
       <li><a href="<?php echo urlModr('ladda-upp'); ?>" class="content-context"><?php echo __('HEADER_UPLOAD'); ?></a></li>
+      <li><a href="<?php echo urlModr('aed'); ?>" class="content-context"><?php echo __('HEADER_AED'); ?></a></li>
     </ul>
   </nav>
 </header>
